remove the lab name in the instruction page

--- a/templates/coopfacevoice/Instructions.html
+++ b/templates/coopfacevoice/Instructions.html
@@ -3,13 +3,13 @@
 {% load i18n %}
 
 {% block title %}
-    {% trans "Welcome to the LEEM" %}
+    {% trans "Welcome" %}
 {% endblock %}
 
 {% block content %}
 
     <p>
-        {% trans "Please read the instructions and then clic on the next button below." %}
+        {% trans "Please read the instructions and then click on the next button below." %}
     </p>
 
     {% next_button %}
