All the experiment in only one app

--- a/templates/coopfacelab/CFResults.html
+++ b/templates/coopfacelab/CFResults.html
@@ -12,7 +12,7 @@
         {% blocktrans with question=period_selected_for_pay %}
         This is your choice at question {{ question }} that has been selected for your payoff. <br />
         {% endblocktrans %}
-        {% trans "Your payoff for the part is equal to " %} {{ player.part_payoff }}.</p>
+        {% trans "Your payoff for the part is equal to " %} {{ player.CF_payoff }}.</p>
 
     {% next_button %}
 
