--- a/templates/coopfacelab/CFEnd.html
+++ b/templates/coopfacelab/CFEnd.html
@@ -9,7 +9,7 @@
 {% block content %}
 
     <p>
-        {% trans "The part is over. Your payoff for this part is equal to " %} {{ subsession_payoff }}.
+        {% trans "The part is over. Your payoff for this part is equal to " %} {{ cf_payoff }}.
     </p>
 
 
