--- a/templates/coopfacelab/CFDecision.html
+++ b/templates/coopfacelab/CFDecision.html
@@ -8,8 +8,8 @@
 
 {% block content %}
     <p>
-        {% blocktrans with contrib=Constants.contribution %}
-        Please select the person with whom you will interact, knowing that you will put {{ contrib }} tokens in the collective account.
+        {% blocktrans with contrib=Constants.endowment %}
+        Please select the player you want to interact with, knowing that you will put {{ contrib }} tokens in the collective account.
         {% endblocktrans %}
     </p>
     <table>
